[gd_scene load_steps=35 format=3 uid="uid://4wlxyxvooems"]

[ext_resource type="Script" path="res://anim_tree_state_machine.gd" id="1_0ah2n"]
[ext_resource type="Texture2D" uid="uid://ypfqrw6ptvvq" path="res://icon.png" id="1_lt1aj"]

[sub_resource type="Animation" id="Animation_01wn7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 3,
"values": [Vector2(510, 465)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qorf6"]
resource_name = "horizontal"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(310, 465), Vector2(710, 465)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.364774, 0.364774, -0.349066, -0.349066]
}

[sub_resource type="Animation" id="Animation_bxt3e"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:skew")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.436332, 0.436332]
}

[sub_resource type="Animation" id="Animation_aao6w"]
resource_name = "method_at_0.25s"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.117647, 0.933333, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"print_i_worked"
}]
}

[sub_resource type="Animation" id="Animation_shauh"]
resource_name = "method_at_4"
length = 0.166667
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.498039, 1, 0.188235, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"print_i_worked"
}]
}

[sub_resource type="Animation" id="Animation_74h6m"]
resource_name = "method_at_5"
length = 0.208333
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.208333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.85098, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.208333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"print_i_worked"
}]
}

[sub_resource type="Animation" id="Animation_3cq7a"]
resource_name = "method_at_6"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.101961, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"print_i_worked"
}]
}

[sub_resource type="Animation" id="Animation_q1h23"]
resource_name = "vertical"
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(510, 515), Vector2(510, 115)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f34yr"]
_data = {
"RESET": SubResource("Animation_01wn7"),
"horizontal": SubResource("Animation_qorf6"),
"idle": SubResource("Animation_bxt3e"),
"method_at_0.25s": SubResource("Animation_aao6w"),
"method_at_4": SubResource("Animation_shauh"),
"method_at_5": SubResource("Animation_74h6m"),
"method_at_6": SubResource("Animation_3cq7a"),
"vertical": SubResource("Animation_q1h23")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5qqvo"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lg3km"]
animation = &"method_at_0.25s"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tjmtb"]
animation = &"method_at_4"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l0ofo"]
animation = &"method_at_5"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5yrvf"]
animation = &"method_at_6"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xncw0"]
animation = &"horizontal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ictip"]
animation = &"vertical"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3ji48"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ha4it"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i3feb"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0hegg"]
states/Start/position = Vector2(488, 14)
states/horizontal/node = SubResource("AnimationNodeAnimation_xncw0")
states/horizontal/position = Vector2(365, 145)
states/vertical/node = SubResource("AnimationNodeAnimation_ictip")
states/vertical/position = Vector2(632, 134)
transitions = ["Start", "horizontal", SubResource("AnimationNodeStateMachineTransition_3ji48"), "horizontal", "vertical", SubResource("AnimationNodeStateMachineTransition_ha4it"), "vertical", "End", SubResource("AnimationNodeStateMachineTransition_i3feb")]
graph_offset = Vector2(-62, -23)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wymgt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3yiq1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qrcbn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kat6m"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dmeer"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4kgfx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ew6uh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_odlav"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2buot"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bw4e6"]
states/End/position = Vector2(861, 182)
states/idle/node = SubResource("AnimationNodeAnimation_5qqvo")
states/idle/position = Vector2(656, 57)
states/method_at_025s/node = SubResource("AnimationNodeAnimation_lg3km")
states/method_at_025s/position = Vector2(193, 295)
states/method_at_4/node = SubResource("AnimationNodeAnimation_tjmtb")
states/method_at_4/position = Vector2(363, 216)
states/method_at_5/node = SubResource("AnimationNodeAnimation_l0ofo")
states/method_at_5/position = Vector2(542, 290)
states/method_at_6/node = SubResource("AnimationNodeAnimation_5yrvf")
states/method_at_6/position = Vector2(363, 364)
states/move_group/node = SubResource("AnimationNodeStateMachine_0hegg")
states/move_group/position = Vector2(961, 57)
transitions = ["idle", "move_group", SubResource("AnimationNodeStateMachineTransition_wymgt"), "idle", "move_group/horizontal", SubResource("AnimationNodeStateMachineTransition_3yiq1"), "idle", "move_group/vertical", SubResource("AnimationNodeStateMachineTransition_qrcbn"), "move_group", "idle", SubResource("AnimationNodeStateMachineTransition_kat6m"), "Start", "method_at_4", SubResource("AnimationNodeStateMachineTransition_dmeer"), "method_at_4", "method_at_5", SubResource("AnimationNodeStateMachineTransition_4kgfx"), "method_at_5", "method_at_6", SubResource("AnimationNodeStateMachineTransition_ew6uh"), "method_at_6", "method_at_025s", SubResource("AnimationNodeStateMachineTransition_odlav"), "method_at_025s", "method_at_4", SubResource("AnimationNodeStateMachineTransition_2buot")]
graph_offset = Vector2(-131, -29)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_ho5lf"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_081db"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0ah2n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(510, 465)
texture = ExtResource("1_lt1aj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_f34yr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_bw4e6")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_ho5lf")
parameters/move_group/playback = SubResource("AnimationNodeStateMachinePlayback_081db")

[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
